--- a/app/src/main/res/layout/item_weight_date.xml
+++ b/app/src/main/res/layout/item_weight_date.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:gravity="center">
@@ -31,7 +31,7 @@
             android:layout_toLeftOf="@id/averageWeightTextView"
             android:layout_toStartOf="@id/averageWeightTextView"
             app:layoutManager="android.support.v7.widget.GridLayoutManager"
-            app:spanCount="3"
+            app:spanCount="2"
             android:id="@+id/weightsItemRecyclerView"/>
     </RelativeLayout>
 </LinearLayout>
