--- a/app/src/main/res/layout/item_weight_date.xml
+++ b/app/src/main/res/layout/item_weight_date.xml
@@ -4,12 +4,14 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:padding="@dimen/viewDefaultSmallMargin"
     android:gravity="center">
     <android.support.v7.widget.AppCompatTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/textDefaultLargeSize"
+        android:textSize="@dimen/textDefaultExtraLargeSize"
         android:hint="@string/date"
+        android:textColor="@color/colorAccent"
         android:id="@+id/weightDateTextView"/>
 
     <RelativeLayout
@@ -23,6 +25,7 @@
             android:layout_alignParentEnd="true"
             android:textSize="@dimen/textDefaultExtraLargeSize"
             android:hint="@string/averageWeightPreview"
+            android:layout_margin="@dimen/viewDefaultSmallMargin"
             android:id="@+id/averageWeightTextView"/>
 
         <android.support.v7.widget.RecyclerView
