--- a/app/src/main/res/layout/item_weight_date.xml
+++ b/app/src/main/res/layout/item_weight_date.xml
@@ -18,21 +18,34 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.v7.widget.AppCompatTextView
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:textSize="@dimen/textDefaultExtraLargeSize"
-            android:hint="@string/averageWeightPreview"
+            android:layout_alignBottom="@+id/weightsItemRecyclerView"
             android:layout_margin="@dimen/viewDefaultSmallMargin"
-            android:id="@+id/averageWeightTextView"/>
+            android:gravity="center"
+            android:id="@+id/averageWeightContainer">
+            <android.support.v7.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/average"/>
+
+            <android.support.v7.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/textDefaultExtraLargeSize"
+                android:hint="@string/averageWeightPreview"
+                android:id="@+id/averageWeightTextView"/>
+        </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toLeftOf="@id/averageWeightTextView"
-            android:layout_toStartOf="@id/averageWeightTextView"
+            android:layout_toLeftOf="@id/averageWeightContainer"
+            android:layout_toStartOf="@id/averageWeightContainer"
             app:layoutManager="android.support.v7.widget.GridLayoutManager"
             app:spanCount="2"
             android:id="@+id/weightsItemRecyclerView"/>
