fix problem with background on items on old devices

--- a/app/src/main/res/drawable/item_weight_background.xml
+++ b/app/src/main/res/drawable/item_weight_background.xml
@@ -11,6 +11,7 @@
     </item>
     <item>
         <shape>
+            <solid android:color="@android:color/transparent"/>
             <corners android:topLeftRadius="@dimen/viewDefaultMediumMargin"/>
             <stroke
                 android:color="@color/colorPrimary"
