--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/weightsRecyclerView"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
+        app:layoutManager="android.support.v7.widget.GridLayoutManager"
+        app:spanCount="@integer/weightDatesOnScreen"/>
 
     <android.support.v7.widget.AppCompatTextView
         android:layout_width="wrap_content"
