--- a/app/src/main/res/layout/fragment_edit_weight_item.xml
+++ b/app/src/main/res/layout/fragment_edit_weight_item.xml
@@ -27,16 +27,33 @@
                 android:inputType="numberDecimal"
                 android:digits="1234567890."/><!-- bad way -->
         </android.support.design.widget.TextInputLayout>
-        <DatePicker
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/weightDatePicker"
-            android:maxDate="today"
-            android:layout_margin="@dimen/viewDefaultMediumMargin"/>
-        <TimePicker
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:id="@+id/weightTimePicker"
-            android:layout_margin="@dimen/viewDefaultMediumMargin"/>
+        <android.support.v7.widget.ButtonBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <android.support.v7.widget.AppCompatButton
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:id="@+id/weightDateButton"
+                android:hint="@string/date"/>
+            <android.support.v7.widget.AppCompatButton
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:id="@+id/weightTimeButton"
+                android:hint="@string/time"/>
+        </android.support.v7.widget.ButtonBarLayout>
+        <!--<DatePicker-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/weightDatePicker"-->
+            <!--android:maxDate="today"-->
+            <!--android:layout_margin="@dimen/viewDefaultMediumMargin"/>-->
+        <!--<TimePicker-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:id="@+id/weightTimePicker"-->
+            <!--android:nestedScrollingEnabled="true"-->
+            <!--android:layout_margin="@dimen/viewDefaultMediumMargin"/>-->
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
