--- a/app/src/main/res/values-xlarge/integers.xml
+++ b/app/src/main/res/values-xlarge/integers.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="weightDatesOnScreen">4</integer>
+    <integer name="weightDatesChartNumHorizontalLabels">10</integer>
 </resources>
