--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="weightDatesOnScreen">1</integer>
+    <integer name="weightDatesChartNumHorizontalLabels">4</integer>
+    <integer name="weightDatesChartDaysInView">3</integer>
+    <integer name="weightDatesChartDaysInViewDaysPadding">1</integer>
+    <integer name="weightDatesChartDaysInViewKgPadding">5</integer>
 </resources>
