--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,7 +6,9 @@
     <dimen name="textDefaultLargeSize">22sp</dimen>
     <dimen name="textDefaultExtraLargeSize">26sp</dimen>
 
+    <dimen name="viewDefaultExtraSmallMargin">2dp</dimen>
     <dimen name="viewDefaultSmallMargin">4dp</dimen>
     <dimen name="viewDefaultMediumMargin">8dp</dimen>
     <dimen name="viewDefaultLargeMargin">16dp</dimen>
+    <dimen name="viewDefaultExtraLargeMargin">32dp</dimen>
 </resources>
