--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -5,4 +5,6 @@
     <integer name="weightDatesChartDaysInView">3</integer>
     <integer name="weightDatesChartDaysInViewDaysPadding">1</integer>
     <integer name="weightDatesChartDaysInViewKgPadding">5</integer>
+
+    <integer name="weightChartItemDrawTime">50</integer>
 </resources>
